[package]
name = "yaraxserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
pest = "2.7.15"
pest_derive = "2.7.15"
yara-x = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
mimalloc = { version = "*", features = ["secure"] }
actix-multipart = "0.7.2"
sea-orm = { version = "1.1.0", features = ["runtime-tokio-native-tls", "macros", "sqlx-postgres", "with-json"] }
sea-orm-migration = "1.1"
dotenvy = "0.15.7"
chrono = "0.4.39"
base64 = "0.22.1"
env_logger = "0.10"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
colored = "*"